--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,12 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <img src="/assets/img/iframe_32.jpg" class="icon" onclick="filter('resp-container', '32')">
+        <img src="/assets/img/iframe_31.jpg" class="icon" onclick="filter('resp-container', '31')">
+        <img src="/assets/img/iframe_30.jpg" class="icon" onclick="filter('resp-container', '30')">
+        <img src="/assets/img/iframe_29.jpg" class="icon" onclick="filter('resp-container', '29')">
+        <script src="{{ "/assets/js/filter.js" }}"></script>
       </header>
       <section>
 
