--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,11 +9,15 @@
     padding-top: 56.25%;
 }
 
-.resp-iframe {
+.resp-container iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border: 0;
+}
+
+.icon {
+    max-width: 23.98%;
 }
