--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,21 +3,36 @@
 
 @import "{{ site.theme }}";
 
-.resp-container {
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
+.resp-view {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
 }
 
-.resp-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+.resp-view iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.resp-map {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.resp-map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 .icon {
-    max-width: 23.98%;
+  max-width: 23.98%;
 }
