Add "ALL" image buttom to reset the filter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" onclick="filter('.resp', '0')"/>
+          <img src="{{site.logo | relative_url}}" alt="Logo"/>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -38,10 +38,11 @@
         </ul>
         {% endif %}
 
-        <img src="/assets/img/iframe_32.jpg" class="icon" onclick="filter('.resp', '32')">
-        <img src="/assets/img/iframe_31.jpg" class="icon" onclick="filter('.resp', '31')">
-        <img src="/assets/img/iframe_30.jpg" class="icon" onclick="filter('.resp', '30')">
-        <img src="/assets/img/iframe_29.jpg" class="icon" onclick="filter('.resp', '29')">
+        <input type="image" src="/assets/img/all.jpg" class="icon" onclick="filter('.resp', '0')">
+        <input type="image" src="/assets/img/iframe_32.jpg" class="icon" onclick="filter('.resp', '32')">
+        <input type="image" src="/assets/img/iframe_31.jpg" class="icon" onclick="filter('.resp', '31')">
+        <input type="image" src="/assets/img/iframe_30.jpg" class="icon" onclick="filter('.resp', '30')">
+        <input type="image" src="/assets/img/iframe_29.jpg" class="icon" onclick="filter('.resp', '29')">
         <script src="{{ "/assets/js/filter.js" }}"></script>
       </header>
       <section>
