--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <script src="{{ "/assets/js/filter.js" }}"></script>
   </head>
-  <body onload="addInputs(32)">
+  <body onload="addInputs(32, 28)">
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
