--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    <script src="{{ "/assets/js/filter.js" }}"></script>
+    <script src="{{ "/assets/js/customize.js" }}"></script>
   </head>
-  <body onload="addInputs(32, 1)">
+  <body onload="addInputs(32)">
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
@@ -45,6 +45,7 @@
 
       {{ content }}
 
+        <div id="resp"></div>
       </section>
       <footer>
       </footer>
