--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,4 +46,9 @@ header {
 // override footer position style (from fixed)
 footer {
   position: static;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
