--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <script src="{{ "/assets/js/logo.js" }}"></script>
     <script src="{{ "/assets/js/views.js" }}"></script>
     <script src="{{ "/assets/js/main.js" }}"></script>
     <script data-ad-client="ca-pub-6494509040150601" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -20,9 +21,13 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
+        <canvas id="logo" width="270" height="270">
+          <!--Your browser does not support the HTML canvas tag.-->
+          <img src="{{site.logo | relative_url}}" alt="Logo"/>
+        </canvas>
         <script>
           if (!isMobile()) {
-            document.write('<img src="{{site.logo | relative_url}}" alt="Logo"/>');
+            drawLogo();
           }
         </script>
         {% endif %}
