--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-        <canvas id="logo" width="270" height="270">
-          <!--Your browser does not support the HTML canvas tag.-->
-          <img src="{{site.logo | relative_url}}" alt="Logo"/>
-        </canvas>
+        <div id="logos"></div>
         <script>
           if (!isMobile()) {
             drawLogo();
