load icons won't load views until onClick

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <script src="{{ "/assets/js/main.js" }}"></script>
     <script data-ad-client="ca-pub-6494509040150601" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
-  <body onload="loadIcons(views.length)">
+  <body onload="loadViewAndMap(getRandom(0, views.length-1));loadIcons(views.length)">
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
