--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.18.0/js/md5.min.js"></script>
     <script src="{{ "/assets/js/util.js" }}"></script>
+    <script src="{{ "/assets/js/icon.js" }}"></script>
     <script src="{{ "/assets/js/logo.js" }}"></script>
     <script src="{{ "/assets/js/views.js" }}"></script>
     <script src="{{ "/assets/js/main.js" }}"></script>
