use https://github.com/f/graphql.js as graphql client

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,18 +15,21 @@
     <script src="{{ "/assets/js/icon.js" }}"></script>
     <script src="{{ "/assets/js/logo.js" }}"></script>
     <script src="{{ "/assets/js/main.js" }}"></script>
+    <script src="//cdn.jsdelivr.net/npm/graphql.js@0.6.6/graphql.min.js"></script>
     <script data-ad-client="ca-pub-6494509040150601" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
-  <script> var views = []; </script>
-  {% graphql endpoint: "github", query: "views" %}
-    {% for view in data["views"] %}
-      <script>
-        window.views.push({"icon": '{{view["icon"]}}',
-                           "view": '{{view["view"]}}',
-                           "map": '{{view["map"]}}'});
-      </script>
-    {% endfor %}
-  {% endgraphql %}
+  <script>
+    var views = [];
+    var graph = graphql("http://220.135.26.160:4000/graphql");
+    graph(`query { views { icon view map } }`
+    )({
+    }).then(function (response) {
+      views = response.views;
+    }).catch(function (error) {
+      console.log(error);
+    });
+
+  </script>
   <body onload="loadViewAndMap(getRandom(0, window.views.length-1));loadIcons(window.views.length)">
     <div class="wrapper">
       <header>
