--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <script src="{{ "/assets/js/icon.js" }}"></script>
     <script src="{{ "/assets/js/logo.js" }}"></script>
     <script src="{{ "/assets/js/main.js" }}"></script>
-    <script src="//cdn.jsdelivr.net/npm/graphql.js@0.6.6/graphql.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/graphql.js@0.6.6/graphql.min.js"></script>
     <script data-ad-client="ca-pub-6494509040150601" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <script>
