add donate button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,16 @@
         </script>
         {% endif %}
 
-        <p id="description"></p>
-
+        <p></p>
         <div id="inputs"></div>
+        <script>
+          if (!isMobile()) {
+            document.write('<p></p>');
+          }
+        </script>
+        <a href="https://www.buymeacoffee.com/danielhtshih" target="_blank"><img src="https://ps.w.org/buymeacoffee/assets/icon-256x256.png?rev=2424125" alt="" style="height: 32px !important;width: 32px !important;" ></a>
+        <!--<script async defer src="https://buttons.github.io/buttons.js"></script>-->
+        <!--<a class="github-button" href="https://github.com/sponsors/danielhtshih" data-icon="octicon-heart" aria-label="Sponsor @danielhtshih on GitHub">Sponsor</a>-->
       </header>
       <section>
         <script>
