--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
     {% endif %}
     <script data-ad-client="ca-pub-6494509040150601" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
-  <body onload="loadViews('{{ site.description }}')">
+  <body onload="loadViews()">
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a id="title" href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
         <div id="logos"></div>
@@ -44,16 +44,8 @@
         </script>
         {% endif %}
 
-        <p></p>
+        <p><br/></p>
         <div id="inputs"></div>
-        <script>
-          if (!isMobile()) {
-            document.write('<p></p>');
-          }
-        </script>
-        <a href="https://www.buymeacoffee.com/danielhtshih" target="_blank"><img src="https://ps.w.org/buymeacoffee/assets/icon-256x256.png?rev=2424125" alt="" style="height: 32px !important;width: 32px !important;" ></a>
-        <!--<script async defer src="https://buttons.github.io/buttons.js"></script>-->
-        <!--<a class="github-button" href="https://github.com/sponsors/danielhtshih" data-icon="octicon-heart" aria-label="Sponsor @danielhtshih on GitHub">Sponsor</a>-->
       </header>
       <section>
         <script>
@@ -72,7 +64,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <!--<p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>-->
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
@@ -82,6 +74,7 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        <a href="https://www.buymeacoffee.com/danielhtshih" target="_blank"><img src="https://ps.w.org/buymeacoffee/assets/icon-256x256.png?rev=2424125" alt="" style="height: 32px !important;width: 32px !important;" ></a>
       </footer>
     </div>
   </body>
